# rails-mcp-indexer

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  publish.sh  pyproject.toml  requirements.txt  tsconfig.json
examples/: basic_usage.md  sample_config.json
ruby/: Gemfile  ruby_ast_cli.rb
scripts/: postinstall-check.js  setup.sh
src/: database.py  indexer.py  ruby_ast_parser.rb  server.py
src-ts/: database.ts  graph-builder.ts  graph-store.ts  index.ts  indexer.ts  rails-association-mapper.ts  ruby-parser-native.ts  ruby-parser.ts  schema-parser.ts  server.ts
tests/: test_integration.py
