[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rails-mcp-indexer"
version = "1.0.0"
description = "Intelligent code indexing for Ruby on Rails projects via MCP"
readme = "README.md"
authors = [
    {name = "Rails MCP Contributors", email = "contact@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Text Processing :: Indexing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Ruby",
    "Framework :: Rails",
    "Operating System :: OS Independent",
]
keywords = [
    "mcp",
    "rails",
    "ruby",
    "indexing",
    "code-analysis",
    "ast",
    "claude",
    "ai-tools",
    "development-tools"
]
dependencies = [
    "mcp>=1.0.0",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/rails-mcp-indexer"
Issues = "https://github.com/yourusername/rails-mcp-indexer/issues"
Documentation = "https://github.com/yourusername/rails-mcp-indexer#readme"
Repository = "https://github.com/yourusername/rails-mcp-indexer.git"

[project.scripts]
rails-mcp-indexer = "src.server:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
src = ["*.rb"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"